2009-08-13  Eric Seidel  <eric@webkit.org>

Reviewed by David Hyatt.

        wrong font size when css font-family includes monospace
        https://bugs.webkit.org/show_bug.cgi?id=19161

        Update test results now that only "font-family: monospace" is 13px.
        All other combinations of font-family are 16px default size.

        Add two tests:
        font-family-fallback-reset: catches a bug in inheriting font-family fallback.
        computed-style-font-family-monospace: tests this bug, that only "font-family: monospace" is 13px.

        * fast/css/getComputedStyle/computed-style-font-family-expected.txt:
        * fast/css/getComputedStyle/computed-style-font-family-monospace-expected.txt: Added.
        * fast/css/getComputedStyle/computed-style-font-family-monospace.html: Added.
        * fast/css/getComputedStyle/font-family-fallback-reset-expected.txt: Added.
        * fast/css/getComputedStyle/font-family-fallback-reset.html: Added.
        * fast/css/getComputedStyle/resources/computed-style-font-family-monospace.js: Added.
        (fontSizeForFamilies):
        * fast/css/getComputedStyle/resources/font-family-fallback-reset.js: Added.
        * fast/js/method-check.html:
        * platform/mac/css1/font_properties/font_family-expected.txt:
        * platform/mac/css2.1/t1503-c522-font-family-00-b-expected.txt:
        * platform/mac/fast/text/monospace-width-cache-expected.txt:

2009-08-13  Eric Seidel  <eric@webkit.org>

        Reviewed by David Hyatt.

        wrong font size when css font-family includes monospace
        https://bugs.webkit.org/show_bug.cgi?id=19161

        Firefox only uses fixed-width default size for exactly "font-family: monospace;".
        WebKit has historically used fixed-width default size any time a
        font-family includes monospace in the fallback list.

        This patch corrects WebKit's behavior to match Firefox.
        I also had to fix a bug in WebKit's font-family fallback behavior where
        child elements would inherit parts of their parents fallback lists.

        This patch is mostly just replacing all cases where we used to check for:
        fontDescription.genericFontFamily() == MonospaceFamily
        with:
        fontDescription.useFixedDefaultSize()

        Tests: fast/css/getComputedStyle/computed-style-font-family-monospace.html
               fast/css/getComputedStyle/font-family-fallback-reset.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):
           Deploy useFixedDefaultSize().  Also fix the bug where child
           FontDescriptions would carry part of the parent font-family fallback list.
        (WebCore::CSSStyleSelector::checkForGenericFamilyChange):
           It's no longer alright to just check genericFontFamily(),
           we have to check to make sure the changed style has a matching useFixedDefaultSize().
        * platform/graphics/FontDescription.h:
        (WebCore::FontDescription::useFixedDefaultSize):
           Only use the fixed default size if we have one font family and it is "monospace".
           "-webkit-monospace" is the internal representation of the CSS identifier "monospace".

Canonical link: https://commits.webkit.org/38830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47229 268f45cc-cd09-0410-ab3c-d52691b4dbfc