third_party/WebKit/LayoutTests/fast/css/getComputedStyle/resources/font-family-fallback-reset.js
@@ -1,0 +1,20 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description("Setting a new font-family should reset the fallback list to empty before adding the new family.");
+
+var wrapperDiv = document.createElement('div');
+document.body.appendChild(wrapperDiv)
+
+wrapperDiv.innerHTML =
+'<div id="outerDiv" style="font-family: courier new, cursive;">' +
+'should be Courier New' +
+'<div id="timesDiv" style="font-family: foo;">should be Times (default font)</div>' +
+'<div id="cursiveDiv" style="font-family: cursive;">should be cursive</div>' +
+'</div>';
+
+shouldBeEqualToString("window.getComputedStyle(outerDiv, null).fontFamily", "'courier new', cursive");
+shouldBeEqualToString("window.getComputedStyle(timesDiv, null).fontFamily", "foo");
+shouldBeEqualToString("window.getComputedStyle(cursiveDiv, null).fontFamily", "cursive");
+
+document.body.removeChild(wrapperDiv);
+
+var successfullyParsed = true;
